2014-10-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/transpose.sh: script to transpose rows and columns added

2014-10-06	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: showing multiply-defined labels

2014-10-02	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: showing undefined references and citations after compilation

2014-09-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: description text added

2014-09-12	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: "Press Enter" added

2014-09-11	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: re-compiling on changes to the toc, lof, loa or lot
	using `sync` instead of some cheap hack

	* src/parallel.sh: removed in favor of gnu parallel

2014-09-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: looking for .pdf_tex files, too
	looking for a tex file that contains '\documentclass'
	updating on .sty files

2014-09-03	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/pacman-disowned.sh: script to view disowned files added

2014-09-01	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: emphasising errors and warnings using bash color escape codes

2014-08-28	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/lmpmpi.sh: removed

	* src/lmprun.sh: removed

	* src/gitfilter.sh: awesome wrapper around 'git filter-branch' added

2014-08-26	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogfiles.sh: renamed to changelogupdate.sh

	* src/changelogupdate.sh: can be invoked by emacs and vim
	warning if there's no change to be added

	* src/changelogline.sh: cheader comments reformatted


2014-08-25	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogfiles.sh: script to automatically format git changes for a changelog

2014-08-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/fetchall.sh: script to update bare git repos (one-way)

2014-08-19	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
